fix(style): change rem measurements to one more readables and add generic font-family

--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ body {
 
 @media (max-width: 375px) {
   .card {
-    width: 20.438rem;
+    width: 20.43rem;
     margin: 0 1.5rem;
   }
 }
@@ -57,7 +57,7 @@ body {
 .card__learning {
   background-color: var(--yellow);
   color: var(--gray-950);
-  font-family: Figtree-ExtraBold;
+  font-family: Figtree-ExtraBold, Arial, Helvetica, sans-serif;
   font-size: 0.875rem;
   padding: 0.25rem 0.75rem;
   border-radius: 0.25rem;
@@ -72,7 +72,7 @@ body {
 
 .card__title {
   color: var(--gray-950);
-  font-family: Figtree-ExtraBold;
+  font-family: Figtree-ExtraBold, Arial, Helvetica, sans-serif;
   font-size: 1.5rem;
   margin-bottom: 0.75rem;
 }
@@ -98,7 +98,7 @@ body {
 }
 
 .card__author-name {
-  font-family: Figtree-ExtraBold;
+  font-family: Figtree-ExtraBold, Arial, Helvetica, sans-serif;
   font-size: 0.875rem;
   margin-left: 0.75rem;
 }
